Revert "fazendo funcionar no replit"
This reverts commit d220ee6e2f50054a304b741f50755d08153d82af.